[tool.poetry]
name = "pyobs-asi"
version = "0.16.0"
description = "pyobs model for ASI cameras"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
astropy = "^5.0"
numpy = "^1.21"
zwoasi = "^0.1"
pyobs-core = "^0.16.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.16.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']